refactor: Consolidate multi-tool annotations to single tool with mode parameter
- @McpTodo: Consolidate add/list/update/delete/clearCompleted to single 'todo' tool
- @McpPlanner: Consolidate 8 planner methods to single 'planner' tool
- @McpFileRead: Consolidate readLines/grep/readFile/getStats to single 'fileread' tool
- @McpFileWrite: Consolidate 6 file operations to single 'filewrite' tool

Each tool now uses a 'mode' parameter for operation selection with comprehensive
@McpParam documentation (description, examples, constraints, hints).

- Add base64 SVG data URI icons to EchoServer (server + 4 tools)
- Add examples/mcp-configs/ with Claude Desktop configuration samples
- Update FileWriteToolTest to use new unified API (125 tests pass)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>